--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,50 +1,81 @@
-body{
+body {
     background-color: #efefef;
 }
 
-.main{
+.main {
     margin: 30px;
     background-color: white;
 }
 
-.btn-publish{
+.btn-publish {
     float: right;
     margin-bottom: 15px;
 }
 
-.media-object{
+.media-object {
     width: 38px;
     height: 38px;
 }
 
-.media-body{
+.media-body {
     padding-top: 10px;
 }
 
-.text-desc{
+.text-desc {
     font-size: 12px;
     font-weight: normal;
     color: #999999;
 }
 
-.profile .section{
+.profile .section {
     margin-top: 15px;
 }
 
-.community-menu{
-    color: #999;
-    font-size: 13px;
+.question-title{
+    margin-top: 25px;
 }
 
-.jumbotron{
+.community-menu {
+    display: block;
+    color: #999;
+    font-size: 13px;
+    margin-bottom: 15px;
+}
+
+.jumbotron {
     margin: 50px;
 }
 
-.comment{
+.comment {
     margin: 10px 0;
 }
 
-.btn-comment{
+.btn-comment {
     float: right;
     margin-bottom: 10px;
+}
+
+.comments {
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eeeeee;
+}
+
+.comment-sp {
+    margin-top: 0;
+}
+
+.menu {
+    color: #999999;
+    margin-top: 5px;
+}
+
+.menu .icon {
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .icon:hover {
+    color: #499ef3;
 }
