--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -11,9 +11,9 @@
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/community.js" type="application/javascript"></script>
     <script src="/js/editormd.min.js" type="application/javascript"></script>
-<!--
-    <script src="/js/plugins/image-dialog/image-dialog.js"></script>
--->
+    <!--
+        <script src="/js/plugins/image-dialog/image-dialog.js"></script>
+    -->
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -107,5 +107,6 @@
         </div>
     </div>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
